--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ github_username: soohyuk-cho # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: https://www.linkedin.com/in/soohyuk-cho/ # your LinkedIn user name
+linkedin_username: soohyuk-cho # your LinkedIn user name
 telegram_username: # your Telegram user name
 scholar_userid: # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
